use full on reactor