@@ -1,9 +1,8 @@
 package org.taonity.helpbot.discord.event.command.gitea.services;
 
 import discord4j.core.GatewayDiscordClient;
-import java.util.Iterator;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.time.Duration;
+import java.util.*;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
@@ -18,14 +17,15 @@ import org.taonity.helpbot.discord.event.command.gitea.validation.RootValidator;
 import org.taonity.helpbot.discord.event.command.tree.model.Node;
 import org.taonity.helpbot.discord.event.command.tree.model.NodeAndError;
 import org.taonity.helpbot.discord.logging.LogMessage;
-import org.taonity.helpbot.discord.logging.exception.GiteaApiException;
 import org.taonity.helpbot.discord.logging.exception.NoCommitsException;
 import org.taonity.helpbot.discord.logging.exception.TreeRootValidationException;
 import org.taonity.helpbot.discord.logging.exception.YamlProcessingException;
 import org.taonity.helpbot.discord.logging.exception.client.FailedToSearchRepoException;
 import org.taonity.helpbot.discord.logging.exception.client.TreeRootNoValidCommitsException;
 import org.taonity.helpbot.discord.logging.exception.main.EmptyOptionalException;
-import org.taonity.helpbot.discord.logging.exception.main.MainInterruptedException;
+import org.taonity.helpbot.discord.mdc.OnCompleteSignalListenerBuilder;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
 @Slf4j
 @Component
@@ -44,147 +44,164 @@ public class GiteaUserService {
     private final GatewayDiscordClient gatewayDiscordClient;
     private final GitApiService gitApiService;
 
-    public void createUser(int guildSettingsId) throws GiteaApiException {
+    public Mono<Void> createUser(int guildSettingsId) {
         final var giteaUserAlphaNumeric = AlphaNumericGenerator.generateFourCharFromNumber(guildSettingsId);
         final var userName = String.format(USER_NAME_FORMAT, giteaUserAlphaNumeric);
         final var repoName = String.format(REPO_NAME_FORMAT, giteaUserAlphaNumeric);
         final var fileContent = ResourceFileLoader.loadFile(FILE_NAME);
 
-        final var userId = createGiteaUser(userName);
-        createGiteaRepo(userName, repoName);
-        createFile(userName, repoName, fileContent);
+        final var createGiteaUserRepo = createGiteaRepo(userName, repoName)
+                .then(createFile(userName, repoName, fileContent))
+                .delayElement(Duration.ofMillis(1500))
+                .then(giteaApiService.createHook(userName, repoName));
 
-        try {
-            // TODO: For some reason giteaApiService.createFile is asynchronous, so a delay needed before applying
-            // webhook
-            Thread.sleep(1500);
-        } catch (InterruptedException e) {
-            throw new MainInterruptedException(LogMessage.ALERT_20083, e);
-        }
-
-        giteaApiService.createHook(userName, repoName);
-
-        guildSettingsRepository.updateGiteaUser(guildSettingsId, userId, giteaUserAlphaNumeric);
+        return createGiteaUser(userName)
+                .flatMap(userId -> Mono.when(
+                        createGiteaUserRepo,
+                        guildSettingsRepository.updateGiteaUser(guildSettingsId, userId, giteaUserAlphaNumeric)));
     }
 
-    public EditUserOption resetPassword(String guildId) throws GiteaApiException {
-        final var giteaUseID = guildSettingsRepository
+    public Mono<EditUserOption> resetPassword(String guildId) {
+        final var editUserOption = guildSettingsRepository
                 .findGuildSettingByGuildId(guildId)
+                .switchIfEmpty(Mono.error(new EmptyOptionalException(LogMessage.ALERT_20069)))
                 .map(GuildSettings::getGiteaUserId)
-                .orElseThrow(() -> new EmptyOptionalException(LogMessage.ALERT_20069));
+                .flatMap(giteaApiService::getUserByUid)
+                .map(GiteaUser::getUsername)
+                .map(giteaUserName -> new EditUserOption(giteaUserName, PassayPasswordGenerator.generate()));
 
-        final var giteaUserName = giteaApiService.getUserByUid(giteaUseID).getUsername();
-        final var giteaUserOption = new EditUserOption(giteaUserName, PassayPasswordGenerator.generate());
-
-        giteaApiService.editUser(giteaUserOption);
-        return giteaUserOption;
+        return editUserOption.flatMap(
+                editUserOption1 -> giteaApiService.editUser(editUserOption1).thenReturn(editUserOption1));
     }
 
-    public void deleteUser(String guildId) throws GiteaApiException {
-        final var giteaUserId = guildSettingsRepository
+    public Mono<Void> deleteUser(String guildId) {
+        return guildSettingsRepository
                 .findGuildSettingByGuildId(guildId)
+                .switchIfEmpty(Mono.error(new EmptyOptionalException(LogMessage.ALERT_20030)))
                 .map(GuildSettings::getGiteaUserId)
-                .orElseThrow(() -> new EmptyOptionalException(LogMessage.ALERT_20030));
+                .flatMap(giteaApiService::getUserByUid)
+                .map(GiteaUser::getId)
+                .flatMap(giteaUserId -> giteaApiService
+                        .getUserByUid(giteaUserId)
+                        .map(GiteaUser::getUsername)
+                        .zipWith(giteaApiService.getReposByUid(giteaUserId), (userName, repos) -> {
+                            if (!repos.isOk()) {
+                                return Mono.error(new FailedToSearchRepoException(LogMessage.ALERT_20036, guildId));
+                            }
 
-        final var userName = giteaApiService.getUserByUid(giteaUserId).getUsername();
-
-        final var reposByUid = giteaApiService.getReposByUid(giteaUserId);
-
-        if (!reposByUid.isOk()) {
-            throw new FailedToSearchRepoException(LogMessage.ALERT_20036, guildId);
-        }
-
-        final var repoNameList = reposByUid.getData().stream()
-                .filter(repo -> repo.getOwner().getId() == giteaUserId)
-                .map(Repo::getName)
-                .collect(Collectors.toList());
-
-        // TODO: Need a way to throw checked exception in forEach
-        for (final var repoName : repoNameList) {
-            giteaApiService.deleteRepo(userName, repoName);
-        }
-
-        giteaApiService.deleteUser(userName);
+                            final var deleteRepoMonos = repos.getData().stream()
+                                    .filter(repo -> repo.getOwner().getId() == giteaUserId)
+                                    .map(Repo::getName)
+                                    .map(repoName -> giteaApiService.deleteRepo(userName, repoName))
+                                    .toList();
+                            // TODO ???
+                            return Flux.fromIterable(deleteRepoMonos)
+                                    .then()
+                                    .then(giteaApiService.getReposByUid(giteaUserId));
+                        }))
+                .then();
     }
 
-    public NodeAndError getDialogRoot(GuildSettings guildSettings) throws GiteaApiException, NoCommitsException {
+    public Mono<NodeAndError> getDialogRoot(GuildSettings guildSettings) {
         final var giteaUserAlphaNumeric = AlphaNumericGenerator.generateFourCharFromNumber(guildSettings.getId());
         final var userName = String.format(USER_NAME_FORMAT, giteaUserAlphaNumeric);
         final var repoName = String.format(REPO_NAME_FORMAT, giteaUserAlphaNumeric);
 
-        final var commitList = giteaApiService.getCommits(userName, repoName, COMMIT_QUANTITY_TO_RETRIEVE);
-
-        if (commitList.isEmpty()) {
-            throw new NoCommitsException(LogMessage.ALERT_20041);
-        }
-
-        final var commitIterator = commitList.iterator();
-        final var nodeAndErrorBuilder = NodeAndError.builder();
-        try {
-            final var node = getRootFromByCommit(commitIterator.next(), userName, repoName);
-            return nodeAndErrorBuilder.node(node).build();
-        } catch (YamlProcessingException | TreeRootValidationException e) {
-            nodeAndErrorBuilder.errorMessage(e.getMessage());
-            log.warn(LogMessage.ALERT_20047.name());
-        }
-
-        if (!commitIterator.hasNext()) {
-            throw new TreeRootNoValidCommitsException(LogMessage.ALERT_20048, guildSettings.getGuildId());
-        }
-
-        final var nodeOpt = searchForValidNode(commitIterator, userName, repoName);
-        if (nodeOpt.isEmpty()) {
-            gitApiService.squashCommits(
-                    userName, repoName, FAILURE_TREE_BUILDING_ATTEMPTS_LIMIT, guildSettings.getGuildId());
-
-            return searchForValidNode(commitIterator, userName, repoName)
-                    .map(nodeAndErrorBuilder::node)
-                    .orElseThrow(() -> new EmptyOptionalException(LogMessage.ALERT_20029))
-                    .build();
-        } else {
-            return nodeAndErrorBuilder.node(nodeOpt.get()).build();
-        }
+        return giteaApiService
+                .getCommits(userName, repoName, COMMIT_QUANTITY_TO_RETRIEVE)
+                .filter(commits -> !commits.isEmpty())
+                .switchIfEmpty(Mono.error(new NoCommitsException(LogMessage.ALERT_20041)))
+                .flatMap(commits -> {
+                    final var commitIterator = commits.iterator();
+                    final var nodeAndErrorBuilder = NodeAndError.builder();
+                    return getRootNodeByCommit(commitIterator.next(), userName, repoName)
+                            .onErrorResume(e -> {
+                                if (e instanceof YamlProcessingException || e instanceof TreeRootValidationException) {
+                                    nodeAndErrorBuilder.errorMessage(e.getMessage());
+                                    return Mono.<Void>empty()
+                                            .tap(OnCompleteSignalListenerBuilder.of(
+                                                    () -> log.info(LogMessage.ALERT_20047.name())))
+                                            .then(Mono.defer(() -> {
+                                                if (!commitIterator.hasNext()) {
+                                                    return Mono.error(new TreeRootNoValidCommitsException(
+                                                            LogMessage.ALERT_20048, guildSettings.getGuildId()));
+                                                }
+                                                return searchForValidNode(commitIterator, userName, repoName)
+                                                        .switchIfEmpty(Mono.defer(() -> {
+                                                            gitApiService
+                                                                    .reactiveSquashCommit(
+                                                                            userName,
+                                                                            repoName,
+                                                                            FAILURE_TREE_BUILDING_ATTEMPTS_LIMIT,
+                                                                            guildSettings.getGuildId())
+                                                                    .subscribe();
+                                                            return searchForValidNode(
+                                                                            commitIterator, userName, repoName)
+                                                                    .switchIfEmpty(Mono.error(
+                                                                            new EmptyOptionalException(
+                                                                                    LogMessage.ALERT_20029)));
+                                                        }));
+                                            }));
+                                } else {
+                                    return Mono.error(e);
+                                }
+                            })
+                            .map(node -> nodeAndErrorBuilder.node(node).build());
+                });
     }
 
-    private Optional<Node> searchForValidNode(Iterator<RepoCommit> commitIterator, String userName, String repoName)
-            throws GiteaApiException {
-        for (var i = 0; (i < COMMIT_QUANTITY_IN_BUNCH) && commitIterator.hasNext(); i++) {
-            try {
-                return Optional.of(getRootFromByCommit(commitIterator.next(), userName, repoName));
-            } catch (YamlProcessingException | TreeRootValidationException e) {
-                log.warn(LogMessage.ALERT_20046.name());
-            }
-        }
-        return Optional.empty();
+    private Mono<Node> searchForValidNode(Iterator<RepoCommit> commitIterator, String userName, String repoName) {
+        final Iterable<RepoCommit> commitIterable = () -> commitIterator;
+        return Flux.fromIterable(commitIterable)
+                .take(COMMIT_QUANTITY_IN_BUNCH)
+                .flatMap(commit -> Mono.just(commit)
+                        .flatMap(commit1 -> getRootNodeByCommit(commit1, userName, repoName))
+                        .onErrorResume(
+                                e -> e instanceof YamlProcessingException || e instanceof TreeRootValidationException,
+                                e -> Mono.<Node>empty()
+                                        .tap(OnCompleteSignalListenerBuilder.of(
+                                                () -> log.warn(LogMessage.ALERT_20046.name())))))
+                .flatMap(commit -> Mono.just(commit).cache())
+                .filter(Objects::nonNull)
+                .take(1)
+                .singleOrEmpty();
     }
 
-    private Node getRootFromByCommit(RepoCommit commit, String userName, String repoName)
-            throws GiteaApiException, TreeRootValidationException, YamlProcessingException {
-        final var yamlFile = giteaApiService.getFile(userName, repoName, FILE_NAME, commit.getSha());
-        final var node = YamlStringToNodeConvertor.convert(yamlFile.getContentAsString());
-        final var messageCollector = RootValidator.validate(node, gatewayDiscordClient);
-
-        if (messageCollector.isEmpty()) {
-            return node;
-        } else {
-            throw new TreeRootValidationException(LogMessage.ALERT_20043, messageCollector.getErrorsAsString());
-        }
+    private Mono<Node> getRootNodeByCommit(RepoCommit commit, String userName, String repoName) {
+        return giteaApiService
+                .getFile(userName, repoName, FILE_NAME, commit.getSha())
+                .flatMap(yamlFile -> {
+                    try {
+                        return Mono.just(YamlStringToNodeConvertor.convert(yamlFile.getContentAsString()));
+                    } catch (YamlProcessingException e) {
+                        return Mono.error(e);
+                    }
+                })
+                .flatMap(node -> RootValidator.validate(node, gatewayDiscordClient)
+                        .flatMap(stringErrorMessageCollector -> {
+                            if (stringErrorMessageCollector.isEmpty()) {
+                                return Mono.just(node);
+                            } else {
+                                return Mono.error(new TreeRootValidationException(
+                                        LogMessage.ALERT_20043, stringErrorMessageCollector.getErrorsAsString()));
+                            }
+                        }));
     }
 
-    private Integer createGiteaUser(String userName) throws GiteaApiException {
+    private Mono<Integer> createGiteaUser(String userName) {
         final var email = String.format(EMAIL_FORMAT, userName);
         final var password = PassayPasswordGenerator.generate();
         final var user = new CreateUserOption(userName, password, email);
-        return giteaApiService.createUser(user).getId();
+        return giteaApiService.createUser(user).map(GiteaUser::getId);
     }
 
-    private void createGiteaRepo(String userName, String repoName) throws GiteaApiException {
+    private Mono<Void> createGiteaRepo(String userName, String repoName) {
         final var repo = new CreateRepoOption(repoName);
-        giteaApiService.createRepository(userName, repo);
+        return giteaApiService.createRepository(userName, repo);
     }
 
-    private void createFile(String userName, String repoName, String content) throws GiteaApiException {
+    private Mono<Void> createFile(String userName, String repoName, String content) {
         final var file = new CreateFileOption(content);
-        giteaApiService.createFile(userName, repoName, FILE_NAME, file);
+        return giteaApiService.createFile(userName, repoName, FILE_NAME, file);
     }
 }
